--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
               <div class="col-lg-7">
                 <h1>Cool dude Headphone</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum doloremque natus tempore facilis modi. Tempora.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum doloremque natus tempore facilis modi.
+                  Tempora.
                 </p>
                 <button class="btn btn-warning">Buy now</button>
               </div>
@@ -74,7 +75,8 @@
               <div class="col-lg-7">
                 <h1>Large Tv</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum doloremque natus tempore facilis modi. Tempora.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum doloremque natus tempore facilis modi.
+                  Tempora.
                 </p>
                 <button class="btn btn-warning">Buy now</button>
               </div>
@@ -89,7 +91,8 @@
               <div class="col-lg-7">
                 <h1>YA !!! X-Box</h1>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum doloremque natus tempore facilis modi. Tempora.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum doloremque natus tempore facilis modi.
+                  Tempora.
                 </p>
                 <button class="btn btn-warning">Buy now</button>
               </div>
@@ -98,26 +101,185 @@
               </div>
             </div>
           </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+
+
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
     </section>
   </header>
 
-  
-  <main>
+
+  <main style="background-color: rgba(250, 235, 215,.2);">
+
+    <!-- item -->
+    <section class="container my-5">
+      <div class="container overflow-hidden">
+        <div class="row gy-5">
+          <div class="col-lg-4 col-md-6">
+
+            <div class="px-4 py-2 border bg-warning border rounded-3 d-flex align-items-center justify-content-between">
+              <h1>Watch</h1>
+              <img src="images/categories/watch.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+
+            <div class="px-4 py-2 border bg-success border rounded-3 d-flex align-items-center justify-content-evenly">
+              <h1>Shoes</h1>
+              <img src="images/categories/shoes.png" alt="">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+
+            <div class="px-4 py-2 border bg-info border rounded-3 d-flex align-items-center justify-content-between">
+              <h1>Bag</h1>
+              <img src="images/categories/bag.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- shoes section -->
+    <section class="container ">
+      <div class="container my-5">
+        <h2>Shoes</h2>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 ">
+          <div class="col ">
+            <div class="card h-100 border-0 shadow-lg p-2 m-2 ms-0 bg-body rounded">
+              <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                  additional.</p>
+                <h2 class="">$ 350</h2>
+              </div>
+              <div class="card-footer border-0">
+                <button class="btn bg-warning" type="button">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col ">
+            <div class="card h-100 border-0 shadow-lg p-2 m-2 ms-0 bg-body rounded">
+              <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                  additional.</p>
+                <h2 class="">$ 210</h2>
+              </div>
+              <div class="card-footer border-0">
+                <button class="btn bg-warning" type="button">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col ">
+            <div class="card h-100 border-0 shadow-lg p-2 m-2 ms-0 bg-body rounded">
+              <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                  additional.</p>
+                <h2 class="">$ 510</h2>
+              </div>
+              <div class="card-footer border-0">
+                <button class="btn bg-warning" type="button">Buy Now</button>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <!-- Bag section -->
+    <section class="container my-5" style="background-color: rgba(250, 235, 215,.1);">
+      <div class="container ">
+        <h2>Bagpacks</h2>
+        <div class="row row-cols-1  row-cols-sm-2 row-cols-md-3 g-4 ">
+          <div class="col ">
+            <div class="card h-100 border-0 shadow-lg p-2 m-2 ms-0 bg-body rounded">
+              <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red Laltu Bag</h5>
+                <h5 class="">$ 350</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+
+              </div>
+              <div class="card-footer border-0">
+                <button class="btn bg-warning" type="button">Buy Now</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="col ">
+            <div class="card h-100 border-0 shadow-lg p-2 m-2 ms-0 bg-body rounded">
+              <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Blue Niltu Bag</h5>
+                <h5 class="">$ 350</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+
+              </div>
+              <div class="card-footer border-0">
+                <button class="btn bg-warning" type="button">Buy Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col ">
+            <div class="card h-100 border-0 shadow-lg p-2 m-2 ms-0 bg-body rounded">
+              <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Black Kaltu Bag</h5>
+                <h5 class="">$ 350</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+                  content. This content is a little bit longer.</p>
+
+              </div>
+              <div class="card-footer border-0">
+                <button class="btn bg-warning" type="button">Buy Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Subscribe -->
+    <section class="container " >
+      <div class="container bg-info rounded-3 d-flex align-items-center justify-content-center" style="height: 40vh;">
+        <div>
+          <h3 class="text-center">LET'S STAY IN TOUCH</h3>
+          <p class="text-muted">Get updates on sales,special and more</p>
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput">Email address</label>
+          </div>
+          <button type="submit" class="btn btn-warning">Submit</button>
+        </div>
+      </div>
+    </section>
+
+
 
   </main>
   <footer>
-
+    <!-- copyright -->
+    <div class="mt-5 mb-0">
+    <p class="text-center my-0">©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</p>
+</div>
   </footer>
 
 
